--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission-2022</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1 class="left-border">Stay Focused on<br>
+                <span class="color">Mission 2022</span>
+            </h1>
+
+            <p>
+                Every single day is important for us. If we want to prosper in life, we have to work hard. I want to be
+                a
+                successed man up to 2022. So the year 2022 is very important for me. I get a oportunity to prove myself
+                in
+                this year. I will work hard. I can not spoil a single day of this year. Every day is challenging with a
+                daily task.
+            </p>
+            <a class="explore" target="_blank" href="https://www.programming-hero.com/">Explore Now</a>
+            <p id="small-text">Scroll down to explore more about us</p>
+        </div>
+        <div class="half-width"><img src="images/person/person-1.png" alt=""> </div>
+
+    </section>
+
 </body>
+
 </html>
