--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -31,7 +32,46 @@
             <p id="small-text">Scroll down to explore more about us</p>
         </div>
         <div class="half-width"><img src="images/person/person-1.png" alt=""> </div>
-
+    </section>
+    <div class="second-section">
+        <h2>My Mission in <span class="color-orange">2022</span></h2>
+        <div class="all-mission">
+            <div class="div-mission">
+                <div class="div-img">
+                    <img src="images/illustrators/illustrator-1.png" alt="">
+                </div>
+                <h2>Mission</h2>
+                <p>My mission is to be a web developer. I know I can complete my mission. May be mission can be hard but
+                    it's not impossible.</p>
+            </div>
+            <div class="div-mission" id="red">
+                <div class="div-img">
+                    <img src="images/illustrators/illustrator-2.png" alt="">
+                </div>
+                <h2>Vission</h2>
+                <p>To inspire the worlds youth to think big, have serious impact on society and overcome obstacles using
+                    my experience having to do it all on my own.</p>
+            </div>
+            <div class="div-mission">
+                <div class="div-img">
+                    <img src="images/illustrators/illustrator-3.png" alt="">
+                </div>
+                <h2>Goals</h2>
+                <p>My goals is to be a web developer. I think I am able to complete my goals. May be goals can be hard
+                    but
+                    it's not impossible.</p>
+            </div>
+        </div>
+    </div>
+    </div>
+    <section>
+        <div class="coding">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <Div>
+            <h1>Develop <br>
+                Without Limits</h1>
+        </Div>
     </section>
 
 </body>
