--- a/index.html
+++ b/index.html
@@ -64,15 +64,52 @@
         </div>
     </div>
     </div>
-    <section>
-        <div class="coding">
-            <img src="images/pictures/coding.png" alt="">
+    <section class="page">
+        <div class="important-page">
+            <div class="img-src my-name">
+                <img src="images/pictures/coding.png" alt="">
+            </div>
+            <div class="my-name">
+                <h1>Develop <br> Without Limits</h1>
+                <p>I have to practice more and more. there is no alternative option without practice. And there is no
+                    limits of practicing.This the first rule of a developer.</p>
+                <a class="explore" target="_blank" href="https://www.programming-hero.com/">Read the Documentation</a>
+            </div>
         </div>
-        <Div>
-            <h1>Develop <br>
-                Without Limits</h1>
-        </Div>
     </section>
+    <section>
+        <div class="half-width">
+            <h1>Know our <br>Global Community</h1>
+
+            <p>
+                To be a developer I have to know about the global communication. It's very important to know about the
+                global communication. And need to know about global Community.
+            </p>
+            <a class="explore" target="_blank" href="https://www.programming-hero.com/">Read the Documentation</a>
+        </div>
+        <div class="half-width"><img src="images/pictures/project.png" alt=""> </div>
+    </section>
+    <h2 class="middle">Hard<span class="color-orange"> Work</span></h2>
+    <section class="page">
+        <div class="important-page">
+            <div class="img-src my-name">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+            </div>
+            <div class="my-name">
+                <h1 class="gd">Be profesional witth <br> Hard<span class="color">Work</span></h1>
+                <p>I have to practice more and more. there is no alternative option without practice. And there is no
+                    limits of practicing.This the first rule of a developer.</p>
+                <a class="explore" target="_blank" href="https://www.programming-hero.com/">Read the Documentation</a>
+            </div>
+        </div>
+    </section>
+    <footer class="imran">
+        <h1>Mission<span class="black">2022</span></h1>
+        <p class="nazmul">
+            hard work, Perseverance, Determination for 2022
+        </p>
+    </footer>
+
 
 </body>
 
